src/main/java/campbell/parser/gen/CampbellParser.java
// Generated from /home/pieter/programming/haskell/campbell/src/main/java/campbell/parser/Campbell.g4 by ANTLR 4.5
package campbell.parser.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CampbellParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, WHILE=2, IMPL=3, OF=4, TRAIT=5, IF=6, ELSE=7, RETURN=8, UNSAFE=9, 
		TRUE=10, FALSE=11, FUN=12, FOR=13, IN=14, BROKET_OPEN=15, BROKET_CLOSE=16, 
		LTE=17, GTE=18, EQ=19, BRACKET_OPEN=20, BRACKET_CLOSE=21, PAREN_OPEN=22, 
		PAREN_CLOSE=23, DOT=24, COMMA=25, PLUS=26, MINUS=27, STAR=28, SLASH=29, 
		PERCENT=30, EQUALS=31, INT=32, IDENTIFIER=33, OPEN_BLOCK=34, CLOSE_BLOCK=35, 
		NEQ=36, NOT=37, LSH=38, RSH=39, AND=40, OR=41, XOR=42, ERROR=43, HASKELL=44, 
		ARROW=45, NOP=46, SHARED=47, THREADS=48;
	public static final int
		RULE_program = 0, RULE_topLevelStatement = 1, RULE_statement = 2, RULE_haskell = 3, 
		RULE_nop = 4, RULE_fun = 5, RULE_unsafe = 6, RULE_whileNode = 7, RULE_ifNode = 8, 
		RULE_impl = 9, RULE_trait = 10, RULE_returnNode = 11, RULE_decl = 12, 
		RULE_assign = 13, RULE_classNode = 14, RULE_forNode = 15, RULE_expr = 16, 
		RULE_expr0 = 17, RULE_expr1 = 18, RULE_expr2 = 19, RULE_expr3 = 20, RULE_expr4 = 21, 
		RULE_block = 22, RULE_className = 23, RULE_classList = 24, RULE_exprAddon = 25, 
		RULE_bool = 26;
	public static final String[] ruleNames = {
		"program", "topLevelStatement", "statement", "haskell", "nop", "fun", 
		"unsafe", "whileNode", "ifNode", "impl", "trait", "returnNode", "decl", 
		"assign", "classNode", "forNode", "expr", "expr0", "expr1", "expr2", "expr3", 
		"expr4", "block", "className", "classList", "exprAddon", "bool"
	};

	private static final String[] _LITERAL_NAMES = {
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CLASS", "WHILE", "IMPL", "OF", "TRAIT", "IF", "ELSE", "RETURN", 
		"UNSAFE", "TRUE", "FALSE", "FUN", "FOR", "IN", "BROKET_OPEN", "BROKET_CLOSE", 
		"LTE", "GTE", "EQ", "BRACKET_OPEN", "BRACKET_CLOSE", "PAREN_OPEN", "PAREN_CLOSE", 
		"DOT", "COMMA", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "EQUALS", 
		"INT", "IDENTIFIER", "OPEN_BLOCK", "CLOSE_BLOCK", "NEQ", "NOT", "LSH", 
		"RSH", "AND", "OR", "XOR", "ERROR", "HASKELL", "ARROW", "NOP", "SHARED", 
		"THREADS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Campbell.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CampbellParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CampbellParser.EOF, 0); }
		public List<TopLevelStatementContext> topLevelStatement() {
			return getRuleContexts(TopLevelStatementContext.class);
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return getRuleContext(TopLevelStatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54); 
				topLevelStatement();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << WHILE) | (1L << IMPL) | (1L << TRAIT) | (1L << IF) | (1L << RETURN) | (1L << UNSAFE) | (1L << TRUE) | (1L << FALSE) | (1L << FUN) | (1L << FOR) | (1L << PAREN_OPEN) | (1L << MINUS) | (1L << INT) | (1L << IDENTIFIER) | (1L << NOT) | (1L << HASKELL) | (1L << NOP) | (1L << SHARED) | (1L << THREADS))) != 0) );
			setState(59); 
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelStatementContext extends ParserRuleContext {
		public TopLevelStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelStatement; }
	 
		public TopLevelStatementContext() { }
		public void copyFrom(TopLevelStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SharedDeclContext extends TopLevelStatementContext {
		public TerminalNode SHARED() { return getToken(CampbellParser.SHARED, 0); }
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public SharedDeclContext(TopLevelStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterSharedDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitSharedDecl(this);
		}
	}
	public static class NormalStatementContext extends TopLevelStatementContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public NormalStatementContext(TopLevelStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterNormalStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitNormalStatement(this);
		}
	}
	public static class CoresContext extends TopLevelStatementContext {
		public TerminalNode THREADS() { return getToken(CampbellParser.THREADS, 0); }
		public TerminalNode INT() { return getToken(CampbellParser.INT, 0); }
		public CoresContext(TopLevelStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterCores(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitCores(this);
		}
	}

	public final TopLevelStatementContext topLevelStatement() throws RecognitionException {
		TopLevelStatementContext _localctx = new TopLevelStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelStatement);
		try {
			setState(66);
			switch (_input.LA(1)) {
			case CLASS:
			case WHILE:
			case IMPL:
			case TRAIT:
			case IF:
			case RETURN:
			case UNSAFE:
			case TRUE:
			case FALSE:
			case FUN:
			case FOR:
			case PAREN_OPEN:
			case MINUS:
			case INT:
			case IDENTIFIER:
			case NOT:
			case HASKELL:
			case NOP:
				_localctx = new NormalStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(61); 
				statement();
				}
				break;
			case SHARED:
				_localctx = new SharedDeclContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(62); 
				match(SHARED);
				setState(63); 
				decl();
				}
				break;
			case THREADS:
				_localctx = new CoresContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(64); 
				match(THREADS);
				setState(65); 
				match(INT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public HaskellContext haskell() {
			return getRuleContext(HaskellContext.class,0);
		}
		public NopContext nop() {
			return getRuleContext(NopContext.class,0);
		}
		public FunContext fun() {
			return getRuleContext(FunContext.class,0);
		}
		public UnsafeContext unsafe() {
			return getRuleContext(UnsafeContext.class,0);
		}
		public WhileNodeContext whileNode() {
			return getRuleContext(WhileNodeContext.class,0);
		}
		public IfNodeContext ifNode() {
			return getRuleContext(IfNodeContext.class,0);
		}
		public ImplContext impl() {
			return getRuleContext(ImplContext.class,0);
		}
		public TraitContext trait() {
			return getRuleContext(TraitContext.class,0);
		}
		public ReturnNodeContext returnNode() {
			return getRuleContext(ReturnNodeContext.class,0);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public ClassNodeContext classNode() {
			return getRuleContext(ClassNodeContext.class,0);
		}
		public ForNodeContext forNode() {
			return getRuleContext(ForNodeContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(82);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68); 
				haskell();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69); 
				nop();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(70); 
				fun();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(71); 
				unsafe();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(72); 
				whileNode();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(73); 
				ifNode();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(74); 
				impl();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(75); 
				trait();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(76); 
				returnNode();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(77); 
				decl();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(78); 
				assign();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(79); 
				classNode();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(80); 
				forNode();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(81); 
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HaskellContext extends ParserRuleContext {
		public TerminalNode HASKELL() { return getToken(CampbellParser.HASKELL, 0); }
		public HaskellContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_haskell; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterHaskell(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitHaskell(this);
		}
	}

	public final HaskellContext haskell() throws RecognitionException {
		HaskellContext _localctx = new HaskellContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_haskell);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); 
			match(HASKELL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NopContext extends ParserRuleContext {
		public TerminalNode NOP() { return getToken(CampbellParser.NOP, 0); }
		public NopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterNop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitNop(this);
		}
	}

	public final NopContext nop() throws RecognitionException {
		NopContext _localctx = new NopContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); 
			match(NOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunContext extends ParserRuleContext {
		public TerminalNode FUN() { return getToken(CampbellParser.FUN, 0); }
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(CampbellParser.IDENTIFIER, 0); }
		public TerminalNode PAREN_OPEN() { return getToken(CampbellParser.PAREN_OPEN, 0); }
		public TerminalNode PAREN_CLOSE() { return getToken(CampbellParser.PAREN_CLOSE, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(CampbellParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CampbellParser.COMMA, i);
		}
		public FunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterFun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitFun(this);
		}
	}

	public final FunContext fun() throws RecognitionException {
		FunContext _localctx = new FunContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fun);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); 
			match(FUN);
			setState(89); 
			className();
			setState(90); 
			match(IDENTIFIER);
			setState(91); 
			match(PAREN_OPEN);
			setState(100);
			_la = _input.LA(1);
			if (_la==PAREN_OPEN || _la==IDENTIFIER) {
				{
				setState(92); 
				decl();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(93); 
					match(COMMA);
					setState(94); 
					decl();
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(102); 
			match(PAREN_CLOSE);
			setState(104);
			_la = _input.LA(1);
			if (_la==OPEN_BLOCK) {
				{
				setState(103); 
				block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnsafeContext extends ParserRuleContext {
		public TerminalNode UNSAFE() { return getToken(CampbellParser.UNSAFE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public UnsafeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unsafe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterUnsafe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitUnsafe(this);
		}
	}

	public final UnsafeContext unsafe() throws RecognitionException {
		UnsafeContext _localctx = new UnsafeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_unsafe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); 
			match(UNSAFE);
			setState(107); 
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileNodeContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(CampbellParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterWhileNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitWhileNode(this);
		}
	}

	public final WhileNodeContext whileNode() throws RecognitionException {
		WhileNodeContext _localctx = new WhileNodeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_whileNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); 
			match(WHILE);
			setState(110); 
			expr(0);
			setState(111); 
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfNodeContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(CampbellParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(CampbellParser.ELSE, 0); }
		public IfNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterIfNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitIfNode(this);
		}
	}

	public final IfNodeContext ifNode() throws RecognitionException {
		IfNodeContext _localctx = new IfNodeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifNode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); 
			match(IF);
			setState(114); 
			expr(0);
			setState(115); 
			block();
			setState(118);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(116); 
				match(ELSE);
				setState(117); 
				block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImplContext extends ParserRuleContext {
		public TerminalNode IMPL() { return getToken(CampbellParser.IMPL, 0); }
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode OF() { return getToken(CampbellParser.OF, 0); }
		public ClassListContext classList() {
			return getRuleContext(ClassListContext.class,0);
		}
		public ImplContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterImpl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitImpl(this);
		}
	}

	public final ImplContext impl() throws RecognitionException {
		ImplContext _localctx = new ImplContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_impl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); 
			match(IMPL);
			setState(121); 
			className();
			setState(124);
			_la = _input.LA(1);
			if (_la==OF) {
				{
				setState(122); 
				match(OF);
				setState(123); 
				classList();
				}
			}

			setState(126); 
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TraitContext extends ParserRuleContext {
		public TerminalNode TRAIT() { return getToken(CampbellParser.TRAIT, 0); }
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode OF() { return getToken(CampbellParser.OF, 0); }
		public ClassListContext classList() {
			return getRuleContext(ClassListContext.class,0);
		}
		public TraitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trait; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterTrait(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitTrait(this);
		}
	}

	public final TraitContext trait() throws RecognitionException {
		TraitContext _localctx = new TraitContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_trait);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); 
			match(TRAIT);
			setState(129); 
			className();
			setState(132);
			_la = _input.LA(1);
			if (_la==OF) {
				{
				setState(130); 
				match(OF);
				setState(131); 
				classList();
				}
			}

			setState(134); 
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnNodeContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(CampbellParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnNode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterReturnNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitReturnNode(this);
		}
	}

	public final ReturnNodeContext returnNode() throws RecognitionException {
		ReturnNodeContext _localctx = new ReturnNodeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_returnNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); 
			match(RETURN);
			setState(137); 
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(CampbellParser.IDENTIFIER, 0); }
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitDecl(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); 
			className();
			setState(140); 
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode EQUALS() { return getToken(CampbellParser.EQUALS, 0); }
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CampbellListener ) ((CampbellListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_assign);
		try {
			setState(150);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142); 
				expr(0);
				setState(143); 
				match(EQUALS);
				setState(144); 
				expr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(146); 
				decl();
				setState(147); 
				match(EQUALS);
				setState(148); 
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
